fixed spacing on buttons small view; changed hovering text box on large view

--- a/partials/_benefits.scss
+++ b/partials/_benefits.scss
@@ -1,18 +1,22 @@
 .benefits {
+    max-height:100px;
+    transition:max-height 1s ease;
     h3 { //accordian style text boxes below
         background-color: white;
         opacity: .8;
         border-radius: 10px;
         padding: 2%;
         transition:1s;
-        
-    }
+     }
+    
     p, p ~ p {
         opacity:0;
         transition-property:opacity;
         transition-duration:1.5s;
+        transform:scale(0);
     }
     &:hover, &:focus{
+        max-height:900px;
         & > h3 {
         color:$color-3;
         border:3px solid red;
@@ -24,6 +28,7 @@
             opacity: .8;
             border-radius: 10px;
             padding: 2%;
+            transform:scale(1);
         }
     }
     @media screen and (max-width: 39.9em) {
