--- a/partials/_participation.scss
+++ b/partials/_participation.scss
@@ -1,19 +1,26 @@
 .participation {
-
+    max-height:100px;
+    transition:max-height 1s ease;
     h3 { //accordian style text boxes below
         background-color: white;
         opacity: .8;
         border-radius: 10px;
         padding: 2%;
         transition:1s;
-        
+        &:after{
+            border-top:0 solid red;
+             border-bottom:10px solid green;
+            transition:border-top .1s, border-bottom .1s .1s;
+        }
     }
     p, p ~ p {
         opacity:0;
         transition-property:opacity;
         transition-duration:1.5s;
+        transform:scale(0);
     }
     &:hover, &:focus{
+        max-height:900px;
         & > h3 {
         color:$color-3;
         border:3px solid red;
@@ -24,6 +31,7 @@
             opacity: .8;
             border-radius: 10px;
             padding: 2%;
+            transform:scale(1);
         }
     }
     @media screen and (max-width: 39.9em) {
