--- a/partials/_requirements.scss
+++ b/partials/_requirements.scss
@@ -1,4 +1,6 @@
 .requirements {
+    max-height:100px;
+    transition: max-height 1s ease;
     h3 {
         background-color: white;
         opacity: .8;
@@ -10,8 +12,10 @@
         opacity:0;
         transition-property:opacity;
         transition-duration:1.5s;
+        transform:scale(0);
     }
     &:hover, &:focus{
+        max-height:2000px;
         & > h3 {
         color:$color-3;
         border:3px solid red;
@@ -22,11 +26,14 @@
             background-color: white;
             border-radius: 10px;
             padding: 2%;
+            transform:scale(1);
         }
     }
     @media screen and (max-width: 39.9em) {
         width: 90vw;
         margin: 0 auto;
+        max-height:100px;
+        transitioni:max-height 1s ease;
         h3 {
             padding: 50px 2% 2% 2%; 
             &:after {
